croatia-components-main@ce2ceb27993/bitbucket/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: bitbucket
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
      containers:
        - name: postgres
          # 15.2
          image: "docker.io/library/postgres@sha256:901df890146ec46a5cab7a33f4ac84e81bac2fe92b2c9a14fd649502c4adf954"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: postgres-data
