croatia-components-main@ce2ceb27993/bitbucket/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bitbucket
  labels:
    app.kubernetes.io/name: postgres
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  ports:
    - port: 5432
  selector:
    app.kubernetes.io/name: postgres
