croatia-components-main@ce2ceb27993/bitbucket/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bitbucket
  namespace: bitbucket
spec:
  host: bitbucket.apps.dev-nonpci-shared.npnbank.local
  to:
    kind: Service
    name: bitbucket
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
